--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,34 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 22
+    buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "net.spiralpower.clueless"
-        minSdkVersion 15
-        targetSdkVersion 20
+        minSdkVersion 18
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
+    signingConfigs {
+        release {
+            keyAlias 'key'
+            keyPassword 'Zotqzyzw1337'
+            storeFile file('../keystore2')
+            storePassword 'Zotqzyzw1337'
+        }
+    }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:20.0.0'
+    compile 'com.android.support:appcompat-v7:22.1.1'
 }
